@@ -1,3 +1,8 @@
+2010-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
+
+	* src/main.c, src/wkeys.c, src/minicom.c: Fix crash when terminal
+	  reads return EOF. By Pavel Roskin.
+
 2010-01-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
 	* src/main.c: Fix status line to redraw only if necessary.
